--- a/index.html
+++ b/index.html
@@ -40,15 +40,46 @@
       </div>
       <div class="header__content">
         <h1 class="header__title">Wawe</h1>
-        <h2 class="header__subtitle">Школа серфинга на канарских Островах</h4>
+        <h4 class="header__subtitle">Школа серфинга на канарских Островах</h4>
         <a class="header__icon-serf" href="#">
           <img src="images/icon-serf.svg" alt="Логотип серфинга">
         </a>
       </div>
     </div>
-    
-
   </header>
+
+  <section class="about">
+    <div class="container">
+      <h2 class="title">О&ensp;школе, о серфинге, о канарах </h2>
+      <div class="about__inner">
+        <p>
+          Канарские острова не случайно называют европейскими Гавайями – это идеальное место для поклонников серфинга: стабильный теплый ветер круглый год, песчаные пляжи, километры нетронутых просторов и прозрачное море. А настоящей Меккой для серфингистов становится Фуэртевентура – второй по величине остров архипелага.
+        </p>
+        <p>
+          Пока что вы только хотите понять, что такое серфинг, или уже испытали всю прелесть катания на волнах, но желаете поднять свой уровень? Наша школа серфинга сможет предложить обучение для любого уровня подготовки.
+        </p>
+        <p>
+          Именно здесь лучшее в Испании место, в котором можно пройти обучение серфингу. Кроме того, что зимой и осенью сюда приходят огромные атлантические волны, Фуэртевентура может похвастать и множеством мелководных спокойных лагун, отлично подходящих для обучения начинающих серфингистов.
+        </p>
+        <p>
+          Четыре часа увлекательных занятий в день помогут вам уверенно покорять волны, почувствовать себя настоящим серфингистом.
+        </p>
+        <p>
+          Серфинг на Канарских островах доступен круглый год – и волны, и подходящая погода здесь есть всегда. Причем волну, подходящую по уровню, сможет найти и настоящий профи, и новичок. Не случайно считается, что именно это место лучше всего подойдет для обучения здесь возможно без сложностей переходить на новый уровень.
+        </p>
+        <p>
+          Основные достоинства нашей русской школы – высокое качество преподавания и организации занятий, безопасность (все наши клиенты застрахованы в компании Allianz), отличный инвентарь и экипировка (предоставляется на весь курс обучения), в том числе мягкие безопасные доски для начинающих.
+        </p>
+        <p>
+          Перечисляя достоинства, нельзя обойти и то, что пляжи Фуэртевентуры самые протяженные на Канарах. В итоге невозможно представить их переполненных туристами. Вы столкнетесь только с теми, кого,как и вас, будет интересовать одна цель – обучение серфингу.
+        </p>
+        <p>
+          Сначала мы определяем уровень катания и физической подготовки и только потом составляем программу подготовки. И можем заверить, что после того, как закончится обучение, вы не только получите массу великолепных ощущений, но и это уровень поднимется на новую ступень.
+        </p>
+      </div>
+    </div>
+  </section>
+
 
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="js/main.js"></script>
