--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header class="header">
+  <!-- <header class="header">
     <div class="container">
       <div class="header__top">
         <a href="#" class="logo">
@@ -48,7 +48,7 @@
     </div>
   </header>
 
-  <section class="about">
+   <section class="about">
     <div class="container">
       <h2 class="title">О&ensp;школе, о серфинге, о канарах </h2>
       <div class="about__inner">
@@ -78,6 +78,39 @@
         </p>
       </div>
     </div>
+  </section>  -->
+
+  <section class="school">
+    <div class="container">
+      <h1 class="title">В школе вы получите</h1>
+      <div class="school__features">
+        <div class="school__feature">
+          <h4 class="school__feature-title icon-living">Проживание</h4>
+          <p class="school__feature-text">
+            Наша школа серфинга находится в 100 м от океанского побережья. К услугам гостей открытый бассейн и бесплатный Wi-Fi. Из верхней террасы открывается вид на океан. Расстояние до центра города 15 мин. 
+          </p>
+        </div>
+        <div class="school__feature">
+          <h4 class="school__feature-title icon-flying">Перелет и страховку</h4>
+          <p class="school__feature-text">
+            Все участники программы застрахованы страховой компанией Allianz.
+          </p>
+          <p class="school__feature-text">
+            Перелет из Тенерифе до острова Лансароте  и обратно входит в стоимость программы
+          </p>
+        </div>
+        <div class="school__feature">
+          <h4 class="school__feature-title icon-training">Обучение и экипировку</h4>
+          <p class="school__feature-text">
+            Все оборудование и экипировка известных производителей и предоставляется на весь курс программы. Тренировочный процесс начинается с определения вашего уровня катания 
+          </p>
+        </div>
+
+      </div>
+    <div class="school__about">
+      
+    </div>
+  </div>
   </section>
 
 
