--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <!-- <header class="header">
+  <header class="header">
     <div class="container">
       <div class="header__top">
         <a href="#" class="logo">
@@ -78,11 +78,11 @@
         </p>
       </div>
     </div>
-  </section>  -->
+  </section> 
 
   <section class="school">
     <div class="container">
-      <h1 class="title">В школе вы получите</h1>
+      <h1 class="title">В &nbspшколе вы получите</h1>
       <div class="school__features">
         <div class="school__feature">
           <h4 class="school__feature-title icon-living">Проживание</h4>
@@ -107,8 +107,26 @@
         </div>
 
       </div>
-    <div class="school__about">
-      
+    <div class="school__info">
+      <div class="school__info-statistics">
+        <div class="info-item info-item1">
+          Приехали второй раз<span>85%</span>
+        </div>
+        <div class="info-item info-item2">
+          Научились кататься<span>95%</span>
+        </div>
+        <div class="info-item info-item3">
+          Довольных клиентов<span>99%</span>
+        </div>
+      </div>
+      <div class="school__info-text">
+        <p>
+          Огромным преимуществом нашей школы является собственная методика обучения. Мы разработали собственный стиль обучения серфингу, который позволяет новичкам максимально быстро встать на доску. 
+        </p>
+        <p>
+          Именно наша методика и наши преподаватели позволили нам пройти аттестацию Федерации серфинга Канарских островов - FEDERACIÓN CANARIA DE SURF. Это означает, что наша школа соответствует всем мировым стандартам. Переаттестация производится ежегодно и это позволяет нам всегда стремиться к улучшению обучения.
+        </p>
+      </div>
     </div>
   </div>
   </section>
