--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Wawe</title>
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@600;700&family=Roboto+Condensed:ital,wght@0,300;0,400;1,400&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Raleway:wght@600;700&family=Roboto+Condensed:ital,wght@0,300;0,400;1,400&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
   <header class="header">
     <div class="container">
@@ -78,7 +82,7 @@
         </p>
       </div>
     </div>
-  </section> 
+  </section>
 
   <section class="school">
     <div class="container">
@@ -129,10 +133,42 @@
       </div>
     </div>
   </div>
+  </section> 
+
+  <section class="study">
+    <div class="container">
+      <div class="study__inner">
+        <h2 class="title">Покоряй вершины</h2>
+        <div class="study__text">
+          <p>
+            Преподаватели нашей школы серфинга в числе лучших серферов на Канарских островах. Среди них - чемпион Европы
+            по лонгборду, который с радостью поделится опытом как с новичками, так и более опытными серферами.
+            Все члены преподавательского состава являются сертифицированными членами Федерации серфинга Канарских
+            островов. Некоторые из них знают русский язык, что определенно позиционирует нас как русскую школу серфинга
+            за
+            границей!
+          </p>
+          <p>
+            Весь тренерский состав регулярно участвует в семинарах и курсах повышения квалификации, которые проводятся
+            по
+            всему миру различными известными серф-клубами и федерациями. Поэтому в нашей школе серфинга вы можете быть
+            спокойны: вас обучают лучшие тренеры!
+          </p>
+          <p>
+            Методика обучения серфингу рассчитана как на новичков, на серферов среднего уровня, так и на серферов уровня
+            ТОП. Тренеры находят подход к каждому, несмотря на то, что обучение серфингу в нашей школе производится в
+            группах. Однако, мы предлагаем персональные уроки серфинга - только вы и тренер! П
+          </p>
+        </div>
+      </div>
+    </div>
   </section>
 
+  <h2 class="title">Cледующее</h2>
 
- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="js/main.js"></script>
 </body>
+
 </html>
