--- a/index.html
+++ b/index.html
@@ -164,8 +164,46 @@
     </div>
   </section>
 
-  <h2 class="title">Cледующее</h2>
-
+  <section class="gallery">
+    <div class="gallery__gallery container">
+      <h2 class="title gallery__title">Галерея</h2>
+      <div class="gallery__filter">
+        <button class="gallert__btn">Все</button>
+        <button class="gallert__btn">Туристы</button>
+        <button class="gallert__btn">Природа</button>
+        <button class="gallert__btn">Профи</button>
+      </div>
+      <div class="gallery__images">
+        <div class="gallery__item"><img src="images/gallery/1.jpg" alt="Название картинки"></div>
+        <div class="gallery__item"><img src="images/gallery/2.jpg" alt="Название картинки"></div>
+        <div class="gallery__item"><img src="images/gallery/3.jpg" alt="Название картинки"></div>
+        <div class="gallery__item"><img src="images/gallery/4.jpg" alt="Название картинки"></div>
+        <div class="gallery__item"><img src="images/gallery/5.jpg" alt="Название картинки"></div>
+        <div class="gallery__item"><img src="images/gallery/6.jpg" alt="Название картинки"></div>
+      </div>
+      <a class="gallery__link-more" href="#">Показать еще</a>
+    </div>
+    <blockquote class="blockquote">
+      «Если сомневаешься – иди катайся.»
+      <span class="blockquote__author">Нэт Янг, первый Чемпион Мира по сёрфингу</span>
+    </blockquote>
+    <div class="gallery__video container">
+      <a class="gallery__video__link" href="#">
+        <img src="images/Play.svg" alt="Воспроизведение видео">
+      </a>
+    </div>
+    <dl class="gallery__statistics container">
+     <dt>450</dt>
+     <dd>туристов</dd>
+     <dt>2500</dt>
+     <dd>часов катания</dd>
+     <dt>10</dt>
+     <dd>проф.тренеров</dd>
+     <dt>365</dt>
+     <dd>дней в году</dd>
+    </dl>
+  </section>
+  
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="js/main.js"></script>
