--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <header class="header">
+  <!-- <header class="header">
     <div class="container">
       <div class="header__top">
         <a href="#" class="logo">
@@ -162,7 +162,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <section class="gallery">
     <div class="gallery__gallery container">
