--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Wawe</title>
   <link
-    href="https://fonts.googleapis.com/css2?family=Raleway:wght@600;700&family=Roboto+Condensed:ital,wght@0,300;0,400;1,400&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Raleway:wght@600;700&family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -168,18 +168,18 @@
     <div class="gallery__gallery container">
       <h2 class="title gallery__title">Галерея</h2>
       <div class="gallery__filter">
-        <button class="gallert__btn">Все</button>
-        <button class="gallert__btn">Туристы</button>
-        <button class="gallert__btn">Природа</button>
-        <button class="gallert__btn">Профи</button>
+        <button class="gallert__btn" data-filter="all">Все</button>
+        <button class="gallert__btn" data-filter=".t">Туристы</button>
+        <button class="gallert__btn" data-filter=".n">Природа</button>
+        <button class="gallert__btn" data-filter=".p">Профи</button>
       </div>
       <div class="gallery__images">
-        <div class="gallery__item"><img src="images/gallery/1.jpg" alt="Название картинки"></div>
-        <div class="gallery__item"><img src="images/gallery/2.jpg" alt="Название картинки"></div>
-        <div class="gallery__item"><img src="images/gallery/3.jpg" alt="Название картинки"></div>
-        <div class="gallery__item"><img src="images/gallery/4.jpg" alt="Название картинки"></div>
-        <div class="gallery__item"><img src="images/gallery/5.jpg" alt="Название картинки"></div>
-        <div class="gallery__item"><img src="images/gallery/6.jpg" alt="Название картинки"></div>
+        <div class="gallery__item mix t n p"><img src="images/gallery/1.jpg" alt="Название картинки"></div>
+        <div class="gallery__item mix t"><img src="images/gallery/2.jpg" alt="Название картинки"></div>
+        <div class="gallery__item mix t"><img src="images/gallery/3.jpg" alt="Название картинки"></div>
+        <div class="gallery__item mix t"><img src="images/gallery/4.jpg" alt="Название картинки"></div>
+        <div class="gallery__item mix n"><img src="images/gallery/5.jpg" alt="Название картинки"></div>
+        <div class="gallery__item mix t n"><img src="images/gallery/6.jpg" alt="Название картинки"></div>
       </div>
       <a class="gallery__link-more" href="#">Показать еще</a>
     </div>
@@ -193,19 +193,20 @@
       </a>
     </div>
     <dl class="gallery__statistics container">
-     <dt>450</dt>
-     <dd>туристов</dd>
-     <dt>2500</dt>
-     <dd>часов катания</dd>
-     <dt>10</dt>
-     <dd>проф.тренеров</dd>
-     <dt>365</dt>
-     <dd>дней в году</dd>
+      <dt>450</dt>
+      <dd>туристов</dd>
+      <dt>2500</dt>
+      <dd>часов катания</dd>
+      <dt>10</dt>
+      <dd>проф. тренеров</dd>
+      <dt>365</dt>
+      <dd>дней в году</dd>
     </dl>
   </section>
-  
+
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="js/mixitup.min.js"></script>
   <script src="js/main.js"></script>
 </body>
 
