--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <!-- <header class="header">
+  <header class="header">
     <div class="container">
       <div class="header__top">
         <a href="#" class="logo">
@@ -23,22 +23,22 @@
         <nav class="menu">
           <ul class="menu">
             <li class="menu__list-item">
-              <a href="#" class="menu__link">О нас</a>
+              <a href="#about" class="menu__link">О нас</a>
             </li>
             <li class="menu__list-item">
-              <a href="#" class="menu__link">Услуги</a>
+              <a href="#services" class="menu__link">Услуги</a>
             </li>
             <li class="menu__list-item">
-              <a href="#" class="menu__link">Стоимость</a>
+              <a href="#price" class="menu__link">Стоимость</a>
             </li>
             <li class="menu__list-item">
-              <a href="#" class="menu__link">Блог</a>
+              <a href="#blog" class="menu__link">Блог</a>
             </li>
             <li class="menu__list-item">
-              <a href="#" class="menu__link">Команда</a>
+              <a href="#team" class="menu__link">Команда</a>
             </li>
             <li class="menu__list-item">
-              <a href="#" class="menu__link">Контакты</a>
+              <a href="#contacts" class="menu__link">Контакты</a>
             </li>
           </ul>
         </nav>
@@ -46,14 +46,15 @@
       <div class="header__content">
         <h1 class="header__title">Wawe</h1>
         <h4 class="header__subtitle">Школа серфинга на канарских Островах</h4>
-        <a class="header__icon-serf" href="#">
+        <a class="header__icon-serf" href="#gallery">
           <img src="images/icon-serf.svg" alt="Логотип серфинга">
         </a>
       </div>
     </div>
+    <a class="arrow-up" href="#"></a>
   </header>
 
-   <section class="about">
+  <section class="about" id="about">
     <div class="container">
       <h2 class="title">О&ensp;школе, о серфинге, о канарах </h2>
       <div class="about__inner">
@@ -85,7 +86,7 @@
     </div>
   </section>
 
-  <section class="school">
+  <section class="school" id="services">
     <div class="container">
       <h1 class="title">В &nbspшколе вы получите</h1>
       <div class="school__features">
@@ -163,9 +164,9 @@
         </div>
       </div>
     </div>
-  </section> -->
+  </section>
 
-  <section class="gallery">
+  <section class="gallery" id="gallery">
     <div class="gallery__gallery container">
       <h2 class="title gallery__title">Галерея</h2>
       <div class="gallery__filter">
@@ -221,6 +222,22 @@
       <dt>365</dt>
       <dd>дней в году</dd>
     </dl>
+  </section>
+
+  <section class="blog" id="blog" >
+    <h2 class="title blog__title">Блог</h2>
+    <ul class="blog__slider">
+      <li class="blog__slide-item container">
+        <a class="blog__slide-link" href="#">
+          <h3 class="blog__slide-title">
+            Что необходимо взять с собой на серф тур
+          </h3>
+          <p class="blog__slide-text">
+            ТОП 20 необходимых вещей для комфортного отдыха и обучения
+          </p>
+        </a>
+      </li>
+    </ul>
   </section>
 
 
